docs: add a link to cprg217 unit 1

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section
-					data-markdown="./md-assets/unit-01-slides.md"
 					data-background-color="ivory"
 					data-background-image="./assets/sait-logo.png"
 					data-background-size="2em"
 					data-background-position="top right"
 					data-separator="---"
 				>
+					<a href="./cprg-217-unit-01.html">CPRG 217 Unit 1</a>
 				</section>
 			</div>
 		</div>
