docs: add links to placeholders

--- a/cprg-217-slides.html
+++ b/cprg-217-slides.html
@@ -23,7 +23,14 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217-slides.html">CPRG 217 Scripting Slides</a></br>
+					<a href="./cprg-217-unit-01.html">CPRG 217 Unit 1</a></br>
+					<a href="#">CPRG 217 Unit 2 🚧</a></br>
+					<a href="#">CPRG 217 Unit 3 🚧</a></br>
+					<a href="#">CPRG 217 Unit 4 🚧</a></br>
+					<a href="#">CPRG 217 Unit 5 🚧</a></br>
+					<a href="#">CPRG 217 Unit 6 🚧</a></br>
+					<a href="#">CPRG 217 Unit 7 🚧</a></br>
+					<a href="#">CPRG 217 Unit 8 🚧</a>
 				</section>
 			</div>
 		</div>
