docs: add titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>SAIT ITS Slides</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -23,7 +23,7 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217-slides.html">CPRG 217 Scripting Slides</a></br>
+					<a href="./cprg-217-slides.html">CPRG 217 Scripting</a></br>
 				</section>
 			</div>
 		</div>
