docs: add link to slides

--- a/cprg-217/cprg-217-unit-01.html
+++ b/cprg-217/cprg-217-unit-01.html
@@ -6,20 +6,20 @@
 
 		<title>CPRG 217 Scripting</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="../dist/reset.css">
+		<link rel="stylesheet" href="../dist/reveal.css">
+		<link rel="stylesheet" href="../dist/theme/black.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
 				<section
-					data-markdown="https://raw.githubusercontent.com/sait-its/sait-its.github.io/refs/heads/main/md-assets/unit-01-slides.md"
+					data-markdown="https://raw.githubusercontent.com/sait-its/sait-its.github.io/refs/heads/main/cprg-217/unit-01-slides.md"
 					data-background-color="ivory"
-					data-background-image="./assets/sait-logo.png"
+					data-background-image="../assets/sait-logo.png"
 					data-background-size="2em"
 					data-background-position="top right"
 					data-separator="---"
@@ -28,10 +28,10 @@
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
+		<script src="../dist/reveal.js"></script>
+		<script src="../plugin/notes/notes.js"></script>
+		<script src="../plugin/markdown/markdown.js"></script>
+		<script src="../plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
