--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217-slides.html">CPRG 217 Scripting</a></br>
+					<a href="./cprg-217/index.html">CPRG 217 Scripting</a></br>
 				</section>
 			</div>
 		</div>
