docs: add Scripting Languages vs. Programming Languages

--- a/cprg-217/cprg-217-unit-01.html
+++ b/cprg-217/cprg-217-unit-01.html
@@ -17,7 +17,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section
-					data-markdown="https://raw.githubusercontent.com/sait-its/sait-its.github.io/refs/heads/main/cprg-217/unit-01-slides.md"
+					data-markdown="./unit-01-slides.md"
 					data-background-color="ivory"
 					data-background-image="../assets/sait-logo.png"
 					data-background-size="2em"
