--- a/cprg-217/index.html
+++ b/cprg-217/index.html
@@ -6,6 +6,10 @@
 
 		<title>CPRG 217 Scripting</title>
 
+		<link rel="icon" href="../assets/script-favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../assets/script-favicon-16x16.png" sizes="16x16" type="image/png">
+		<link rel="icon" href="../assets/script-favicon-32x32.png" sizes="32x32" type="image/png">
+
 		<link rel="stylesheet" href="../dist/reset.css">
 		<link rel="stylesheet" href="../dist/reveal.css">
 		<link rel="stylesheet" href="../dist/theme/black.css">
