docs: add cprg217 unit 2

--- a/cprg-217/cprg-217-unit-02.html
+++ b/cprg-217/cprg-217-unit-02.html
@@ -21,20 +21,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section
+					data-markdown="./unit-02-slides.md"
 					data-background-color="ivory"
 					data-background-image="../assets/sait-logo.png"
-					data-background-size="3em"
+					data-background-size="2em"
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217-unit-01.html">CPRG 217 Unit 1</a></br>
-					<a href="./cprg-217-unit-02.html">CPRG 217 Unit 2</a></br>
-					<a href="#">CPRG 217 Unit 3 🚧</a></br>
-					<a href="#">CPRG 217 Unit 4 🚧</a></br>
-					<a href="#">CPRG 217 Unit 5 🚧</a></br>
-					<a href="#">CPRG 217 Unit 6 🚧</a></br>
-					<a href="#">CPRG 217 Unit 7 🚧</a></br>
-					<a href="#">CPRG 217 Unit 8 🚧</a>
 				</section>
 			</div>
 		</div>
