docs: add cprg217 unit 4

--- a/cprg-217/cprg-217-unit-04.html
+++ b/cprg-217/cprg-217-unit-04.html
@@ -21,20 +21,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section
+					data-markdown="./unit-04-slides.md"
 					data-background-color="ivory"
 					data-background-image="../assets/sait-logo.png"
-					data-background-size="3em"
+					data-background-size="2em"
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217-unit-01.html">1 - Scripting and Python</a></br>
-					<a href="./cprg-217-unit-02.html">2 - Error Handling</a></br>
-					<a href="./cprg-217-unit-03.html">3 - Data Types and Structure</a></br>
-					<a href="./cprg-217-unit-04.html">4 - Scripting Linux</a></br>
-					<a href="#">5 - Scripting Windows 🚧</a></br>
-					<a href="#">6 - Scheduling Tasks 🚧</a></br>
-					<a href="./cprg-217-unit-07.html">7 - Socket Programming</a></br>
-					<a href="#">8 - Ansible and Automation 🚧</a>
 				</section>
 			</div>
 		</div>
