--- a/cprg-217/cprg-217-unit-extras.html
+++ b/cprg-217/cprg-217-unit-extras.html
@@ -27,15 +27,7 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217-unit-01.html">1 - Scripting and Python</a></br>
-					<a href="./cprg-217-unit-02.html">2 - Error Handling</a></br>
-					<a href="./cprg-217-unit-03.html">3 - Data Types and Structure</a></br>
-					<a href="./cprg-217-unit-04.html">4 - Scripting Linux</a></br>
-					<a href="./cprg-217-unit-05.html">5 - Scripting Windows</a></br>
-					<a href="./cprg-217-unit-06.html">6 - Scheduling Automated Tasks</a></br>
-					<a href="./cprg-217-unit-07.html">7 - Socket Programming</a></br>
-					<a href="./cprg-217-unit-08.html">8 - Ansible</a></br>
-					<a href="./cprg-217-unit-extras.html">Python Extras</a>
+					<a href="./py-modules-pkgs.html">Python Modules and Packages</a></br>
 				</section>
 			</div>
 		</div>
