--- a/cprg-217/py-strings.html
+++ b/cprg-217/py-strings.html
@@ -21,14 +21,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section
+					data-markdown="./py-strings.md"
 					data-background-color="ivory"
 					data-background-image="../assets/sait-logo.png"
-					data-background-size="3em"
+					data-background-size="2em"
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./py-modules-pkgs.html">Python Modules and Packages</a></br>
-					<a href="./py-strings.html">Python String Splitting and Formatting</a></br>
 				</section>
 			</div>
 		</div>
