docs: add REST API to network programming

--- a/cprg-217/cprg-217-unit-extras.html
+++ b/cprg-217/cprg-217-unit-extras.html
@@ -30,7 +30,8 @@
 					<a href="./py-modules-pkgs.html">Python Modules and Packages</a></br>
 					<a href="./py-strings.html">Python String Splitting and Formatting</a></br>
 					<a href="./py-logging.html">Logging in Python</a></br>
-					<a href="./py-datacls-ntuple.html">Dataclasses and namedtuple</a></br>
+					<a href="./py-datacls-ntuple.html">Python Dataclasses and namedtuple</a></br>
+					<a href="./shell-scripting.html">Basic Shell Scripting</a></br>
 				</section>
 			</div>
 		</div>
