--- a/cprg-217/index.html
+++ b/cprg-217/index.html
@@ -12,10 +12,10 @@
 
 		<link rel="stylesheet" href="../dist/reset.css">
 		<link rel="stylesheet" href="../dist/reveal.css">
-		<link rel="stylesheet" href="../dist/theme/black.css">
+		<link rel="stylesheet" href="../dist/theme/white.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../plugin/highlight/github.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -35,7 +35,7 @@
 					<a href="./cprg-217-unit-06.html">6 - Scheduling Automated Tasks</a></br>
 					<a href="./cprg-217-unit-07.html">7 - Network Programming</a></br>
 					<a href="./cprg-217-unit-08.html">8 - Ansible</a></br>
-					<a href="./cprg-217-unit-extras.html">Extra Topics</a>
+					<a href="./cprg-217-extras.html">Extra Topics</a>
 				</section>
 			</div>
 		</div>
@@ -52,6 +52,8 @@
 				hash: true,
 				disableLayout: false,
 				slideNumber: 'c/t',
+				width: 1100,
+				height: 800,
 				margin: 0.05,
 				minScale: 0.2,
 				maxScale: 2.0,
