--- a/cprg-217/py-logging.html
+++ b/cprg-217/py-logging.html
@@ -12,10 +12,10 @@
 
 		<link rel="stylesheet" href="../dist/reset.css">
 		<link rel="stylesheet" href="../dist/reveal.css">
-		<link rel="stylesheet" href="../dist/theme/black.css">
+		<link rel="stylesheet" href="../dist/theme/white.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../plugin/highlight/github.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -44,6 +44,8 @@
 				hash: true,
 				disableLayout: false,
 				slideNumber: 'c/t',
+				width: 1100,
+				height: 800,
 				margin: 0.05,
 				minScale: 0.2,
 				maxScale: 2.0,
