--- a/examples/lightbox.html
+++ b/examples/lightbox.html
@@ -7,7 +7,7 @@
 		<title>reveal.js - Ligthbox</title>
 
 		<link rel="stylesheet" href="../dist/reveal.css">
-		<link rel="stylesheet" href="../dist/theme/black.css" id="theme">
+		<link rel="stylesheet" href="../dist/theme/white.css" id="theme">
 
 		<style>
 			.reveal {
