--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/white.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="plugin/highlight/github.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -45,6 +45,8 @@
 				disableLayout: false,
 				slideNumber: 'c/t',
 				margin: 0.05,
+				width: 1100,
+				height: 800,
 				minScale: 0.2,
 				maxScale: 2.0,
 				// Learn about plugins: https://revealjs.com/plugins/
