--- a/cpsy-350/index.html
+++ b/cpsy-350/index.html
@@ -4,39 +4,38 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>SAIT ITS Slides</title>
+		<title>CPSY 350 Intermediate Virtualization</title>
 
-		<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="assets/favicon-16x16.png" sizes="16x16" type="image/png">
-		<link rel="icon" href="assets/favicon-32x32.png" sizes="32x32" type="image/png">
+		<link rel="icon" href="../assets/script-favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../assets/script-favicon-16x16.png" sizes="16x16" type="image/png">
+		<link rel="icon" href="../assets/script-favicon-32x32.png" sizes="32x32" type="image/png">
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/white.css">
+		<link rel="stylesheet" href="../dist/reset.css">
+		<link rel="stylesheet" href="../dist/reveal.css">
+		<link rel="stylesheet" href="../dist/theme/white.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/github.css">
+		<link rel="stylesheet" href="../plugin/highlight/github.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
 				<section
 					data-background-color="ivory"
-					data-background-image="./assets/sait-logo.png"
+					data-background-image="../assets/sait-logo.png"
 					data-background-size="3em"
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217/index.html">CPRG 217 Scripting</a></br>
-					<a href="./cpsy-350/index.html">CPSY 350 Intermediate Virtualization</a></br>
+					<a href="./cloud-native.html">Cloud Native</a></br>
 				</section>
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
+		<script src="../dist/reveal.js"></script>
+		<script src="../plugin/notes/notes.js"></script>
+		<script src="../plugin/markdown/markdown.js"></script>
+		<script src="../plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
@@ -45,9 +44,9 @@
 				hash: true,
 				disableLayout: false,
 				slideNumber: 'c/t',
-				margin: 0.05,
 				width: 1100,
 				height: 800,
+				margin: 0.05,
 				minScale: 0.2,
 				maxScale: 2.0,
 				// Learn about plugins: https://revealjs.com/plugins/
