Refactor cprg-217: consolidate redundant HTML files into single viewer
- Created viewer.html to dynamically load markdown slides via URL parameter
- Updated index.html to use viewer.html?file=<markdown> pattern for all units
- Updated cprg-217-extras.html to use viewer.html for Python topics
- Removed 13 redundant HTML files (cprg-217-unit-*.html, py-*.html, shell-scripting.html)
- Expanded README.md with comprehensive documentation:
  * Project overview and technology stack
  * Project structure diagram
  * Step-by-step guide for adding new slides
  * Development and deployment instructions
  * Reveal.js markdown syntax tips

This refactoring reduces maintenance burden by eliminating duplicate HTML
boilerplate. All slide files now use a single viewer template that loads
markdown content dynamically, making it easier to add new slides in the future.

--- a/cprg-217/cprg-217-extras.html
+++ b/cprg-217/cprg-217-extras.html
@@ -27,11 +27,11 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./py-modules-pkgs.html">Python Modules and Packages</a></br>
-					<a href="./py-strings.html">Python String Splitting and Formatting</a></br>
-					<a href="./py-logging.html">Logging in Python</a></br>
-					<a href="./py-datacls-ntuple.html">Python Dataclasses and namedtuple</a></br>
-					<a href="./shell-scripting.html">Basic Shell Scripting</a></br>
+					<a href="./viewer.html?file=py-modules-pkgs.md">Python Modules and Packages</a></br>
+					<a href="./viewer.html?file=py-strings.md">Python String Splitting and Formatting</a></br>
+					<a href="./viewer.html?file=py-logging.md">Logging in Python</a></br>
+					<a href="./viewer.html?file=py-datacls-ntuple.md">Python Dataclasses and namedtuple</a></br>
+					<a href="./viewer.html?file=shell-scripting.md">Basic Shell Scripting</a></br>
 				</section>
 			</div>
 		</div>
