refactor: share viewer.html

--- a/cprg-217/index.html
+++ b/cprg-217/index.html
@@ -27,14 +27,14 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./viewer.html?file=unit-01-slides.md">1 - Scripting and Python</a></br>
-					<a href="./viewer.html?file=unit-02-slides.md">2 - Error Handling</a></br>
-					<a href="./viewer.html?file=unit-03-slides.md">3 - Data Types and Structure</a></br>
-					<a href="./viewer.html?file=unit-04-slides.md">4 - Scripting Linux</a></br>
-					<a href="./viewer.html?file=unit-05-slides.md">5 - Scripting Windows</a></br>
-					<a href="./viewer.html?file=unit-06-slides.md">6 - Scheduling Automated Tasks</a></br>
-					<a href="./viewer.html?file=unit-07-slides.md">7 - Network Programming</a></br>
-					<a href="./viewer.html?file=unit-08-slides.md">8 - Ansible</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-01-slides.md">1 - Scripting and Python</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-02-slides.md">2 - Error Handling</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-03-slides.md">3 - Data Types and Structure</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-04-slides.md">4 - Scripting Linux</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-05-slides.md">5 - Scripting Windows</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-06-slides.md">6 - Scheduling Automated Tasks</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-07-slides.md">7 - Network Programming</a></br>
+					<a href="../viewer.html?file=cprg-217/unit-08-slides.md">8 - Ansible</a></br>
 					<a href="./cprg-217-extras.html">Extra Topics</a>
 				</section>
 			</div>
