--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="./cprg-217/index.html">CPRG 217 Scripting</a></br>
-					<a href="./cpsy-350/index.html">CPSY 350 Intermediate Virtualization</a></br>
+					<a href="./cpsy-204/index.html">CPSY 204 - Server Fundamentals</a></br>
+					<a href="./cprg-217/index.html">CPRG 217 - Scripting</a></br>
+					<a href="./cpsy-350/index.html">CPSY 350 - Intermediate Virtualization</a></br>
 				</section>
 			</div>
 		</div>
