refactor: add slide dimension and page title mappings

--- a/cpsy-204/index.html
+++ b/cpsy-204/index.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>CPSY 204 - Server Fundamentals</title>
+		<title>CPSY 204 Server Fundamentals</title>
 
-		<link rel="icon" href="../assets/script-favicon.ico" type="image/x-icon">
-		<link rel="icon" href="../assets/script-favicon-16x16.png" sizes="16x16" type="image/png">
-		<link rel="icon" href="../assets/script-favicon-32x32.png" sizes="32x32" type="image/png">
+		<link rel="icon" href="../assets/slide-favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../assets/slide-favicon-16x16.png" sizes="16x16" type="image/png">
+		<link rel="icon" href="../assets/slide-favicon-32x32.png" sizes="32x32" type="image/png">
 
 		<link rel="stylesheet" href="../dist/reset.css">
 		<link rel="stylesheet" href="../dist/reveal.css">
@@ -27,13 +27,13 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="cpsy-204-viewer.html?file=cpsy-204-unit-01.md">1 - Introduction to Linux</a></br>
-					<a href="cpsy-204-viewer.html?file=cpsy-204-unit-02.md">2 - Introduction to Linux Server Administration</a></br>
-					<a href="cpsy-204-viewer.html?file=cpsy-204-unit-03.md">3 - Client-Server Model</a></br>
-					<a href="cpsy-204-viewer.html?file=cpsy-204-unit-04.md">4 - systemd and Firewall</a></br>
-					<a href="cpsy-204-viewer.html?file=cpsy-204-unit-05.md">5 - DHCP</a></br>
-					<a href="cpsy-204-viewer.html?file=cpsy-204-unit-06.md">6 - File Services</a></br>
-					<a href="cpsy-204-viewer.html?file=cpsy-204-unit-07.md">7 - DNS</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-01.md">1 - Introduction to Linux</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-02.md">2 - Introduction to Linux Server Administration</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-03.md">3 - Client-Server Model</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-04.md">4 - systemd and Firewall</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-05.md">5 - DHCP</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-06.md">6 - File Services</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-07.md">7 - DNS</a></br>
 				</section>
 			</div>
 		</div>
