--- a/cpsy-350/cloud-native.html
+++ b/cpsy-350/cloud-native.html
@@ -6,9 +6,9 @@
 
 		<title>CPSY 350 Intermediate Virtualization</title>
 
-		<link rel="icon" href="../assets/script-favicon.ico" type="image/x-icon">
-		<link rel="icon" href="../assets/script-favicon-16x16.png" sizes="16x16" type="image/png">
-		<link rel="icon" href="../assets/script-favicon-32x32.png" sizes="32x32" type="image/png">
+		<link rel="icon" href="../assets/slide-favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../assets/slide-favicon-16x16.png" sizes="16x16" type="image/png">
+		<link rel="icon" href="../assets/slide-favicon-32x32.png" sizes="32x32" type="image/png">
 
 		<link rel="stylesheet" href="../dist/reset.css">
 		<link rel="stylesheet" href="../dist/reveal.css">
