docs: add Linux systemd

--- a/cpsy-204/index.html
+++ b/cpsy-204/index.html
@@ -30,10 +30,10 @@
 					<a href="https://github.com/sait-its/awesome-cpsy-204/blob/main/intro-to-linux.md">1 - Introduction to Linux</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-02.md">2 - Introduction to Linux Server Administration</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-03.md">3 - Client-Server Model</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-04.md">4 - systemd and Firewall</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-05.md">5 - DHCP</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-06.md">6 - File Services</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-07.md">7 - DNS</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-04.md">4 - Linux Daemon, Service and systemd</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-05.md">5 - Firewall and DHCP</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-06.md">6 - NFS and Samba in Linux</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-07.md">7 - Configuring Linux DNS</a></br>
 				</section>
 			</div>
 		</div>
