--- a/cpsy-204/index.html
+++ b/cpsy-204/index.html
@@ -27,9 +27,9 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
-					<a href="https://github.com/sait-its/awesome-cpsy-204/blob/main/intro-to-linux.md">1 - Introduction to Linux</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-02.md">2 - Introduction to Linux Server Administration</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-03.md">3 - Client-Server Model</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-cs-model.md">1 - Client/Server Model</a></br>
+					<a href="https://github.com/sait-its/awesome-cpsy-204/blob/main/intro-to-linux.md">2 - Introduction to Linux</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-linux-admin-intro.md">3 - Introduction to Linux Server Administration</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-04.md">4 - Linux Daemon, Service and systemd</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-05.md">5 - Firewall and DHCP</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-06.md">6 - NFS and Samba in Linux</a></br>
