docs: rename 204 md to module name and update links

--- a/cpsy-204/index.html
+++ b/cpsy-204/index.html
@@ -31,9 +31,9 @@
 					<a href="https://github.com/sait-its/awesome-cpsy-204/blob/main/intro-to-linux.md">Introduction to Linux</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-linux-admin-intro.md">Introduction to Linux Server Administration</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-daemon-svc-systemd.md">Linux Daemon, Service and systemd</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-05.md">5 - Firewall and DHCP</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-06.md">6 - NFS and Samba in Linux</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-unit-07.md">7 - Configuring Linux DNS</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-dhcp.md">DHCP</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-nfs-samba.md">NFS and Samba in Linux</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-dns-linux.md">Configuring Linux DNS</a></br>
 				</section>
 			</div>
 		</div>
