docs: add intro to linux slides

--- a/cpsy-204/index.html
+++ b/cpsy-204/index.html
@@ -28,7 +28,8 @@
 					data-separator="---"
 				>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-cs-model.md">Client/Server Model</a></br>
-					<a href="https://github.com/sait-its/awesome-cpsy-204/blob/main/intro-to-linux.md">Introduction to Linux</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-linux-intro.md">Introduction to Linux</a></br>
+					<!-- <a href="https://github.com/sait-its/awesome-cpsy-204/blob/main/intro-to-linux.md">Introduction to Linux</a></br> -->
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-linux-admin-intro.md">Introduction to Linux Server Administration</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-daemon-svc-systemd.md">Linux Daemon, Service and systemd</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-dhcp.md">DHCP</a></br>
