docs: add linux and win srv dns config

--- a/cpsy-204/index.html
+++ b/cpsy-204/index.html
@@ -33,8 +33,7 @@
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-linux-admin-intro.md">Introduction to Linux Server Administration</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-daemon-svc-systemd.md">Linux Daemon, Service and systemd</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-dhcp.md">DHCP</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-nfs-samba.md">NFS and Samba in Linux</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-dns-linux.md">Configuring Linux DNS</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-dns.md">Configuring DNS</a></br>
 				</section>
 			</div>
 		</div>
