docs: add Effectively Use AI to Learn slides

--- a/cprg-217/index.html
+++ b/cprg-217/index.html
@@ -27,6 +27,7 @@
 					data-background-position="top right"
 					data-separator="---"
 				>
+					<a href="../viewer.html?file=cprg-217/use-ai-to-learn.md">Effectively Use AI to Learn</a></br>
 					<a href="../viewer.html?file=cprg-217/unit-01-slides.md">1 - Scripting and Python</a></br>
 					<a href="../viewer.html?file=cprg-217/unit-02-slides.md">2 - Error Handling</a></br>
 					<a href="../viewer.html?file=cprg-217/unit-03-slides.md">3 - Data Types and Structure</a></br>
