docs: add python testing

--- a/cprg-217/cprg-217-extras.html
+++ b/cprg-217/cprg-217-extras.html
@@ -30,6 +30,7 @@
 					<a href="../viewer.html?file=cprg-217/py-modules-pkgs.md">Python Modules and Packages</a></br>
 					<a href="../viewer.html?file=cprg-217/py-strings.md">Python String Splitting and Formatting</a></br>
 					<a href="../viewer.html?file=cprg-217/py-logging.md">Logging in Python</a></br>
+					<a href="../viewer.html?file=cprg-217/py-unittest.md">Unit Test in Python</a></br>
 					<a href="../viewer.html?file=cprg-217/py-datacls-ntuple.md">Python Dataclasses and namedtuple</a></br>
 					<a href="../viewer.html?file=cprg-217/shell-scripting.md">Basic Shell Scripting</a></br>
 				</section>
