docs: fix DNS doc

--- a/cpsy-204/index.html
+++ b/cpsy-204/index.html
@@ -32,8 +32,8 @@
 					<!-- <a href="https://github.com/sait-its/awesome-cpsy-204/blob/main/intro-to-linux.md">Introduction to Linux</a></br> -->
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-linux-admin-intro.md">Introduction to Linux Server Administration</a></br>
 					<a href="../viewer.html?file=cpsy-204/cpsy-204-daemon-svc-systemd.md">Linux Daemon, Service and systemd</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-dhcp.md">DHCP</a></br>
-					<a href="../viewer.html?file=cpsy-204/cpsy-204-dns.md">Configuring DNS</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-dhcp.md">Dynamic Host Configuration Protocol (DHCP)</a></br>
+					<a href="../viewer.html?file=cpsy-204/cpsy-204-dns.md">Domain Name System (DNS)</a></br>
 				</section>
 			</div>
 		</div>
